# campus-connect

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
.zed/: settings.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/backend/: asgi.py  exceptions.py  settings.py  urls.py
backend/campuses/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/campuses/migrations/: 0001_initial.py  0002_alter_campus_options_campus_banner_url_and_more.py
backend/chat/: admin.py  consumers.py  exceptions.py  middleware.py  models.py  realtime.py  routing.py  serializers.py  tests.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_messagereaction.py  0003_userpresence.py  0004_alter_userpresence_status.py  0005_conversationparticipant_hidden_at.py
backend/chat/realtime/: broadcaster.py  connections.py  dispatcher.py  events.py
backend/chat/selectors/: conversation_selector.py  message_selector.py
backend/chat/services/: conversation_service.py  message_service.py  ping_service.py  presence_service.py  typing_service.py
backend/comments/: models.py  serializers.py  urls.py  views.py
backend/comments/migrations/: 0001_initial.py
backend/posts/: models.py  serializers.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_alter_post_campus.py  0003_alter_post_options_and_more.py  0004_post_feeling_post_image_post_post_type_post_title_and_more.py
backend/users/: contact.py  models.py  serializers.py  tests_auth.py  urls.py  user_urls.py  views.py
(+111 files in other folders)
