[project]
name = "campusconnect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.15",
    "djangorestframework>=3.17.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "djangorestframework-simplejwt>=5.5.0",
    "django-cors-headers>=4.0.0",
    "ruff>=0.15.17",
    "pyright>=1.1.410",
    "pillow>=12.3.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.7",
]
